# MB_DDS

./: .gitignore  CMakeLists.txt  README.md  build.sh
.cache/clangd/index/: BasePhysicalLink.cpp.98D75796980ADC14.idx  BasePhysicalLink.h.D5A1BCCB60B750FD.idx  BasicTypes.h.D025B16FDC12B58A.idx  IPhysicalLink.h.95755062B0BC7AD9.idx  Message.h.5E0649B288F1320E.idx  Publisher.cpp.3FC4ABECDE1F4F30.idx  Publisher.h.78FC6DEE9BA62872.idx  RingBuffer.cpp.66275944259D2988.idx  RingBuffer.h.2D9398A596D33715.idx  SharedMemory.cpp.23C2531AF71E291E.idx  SharedMemory.h.5FC3BA69A9C9565A.idx  Subscriber.cpp.837C900400862AAA.idx  Subscriber.h.D62BF64FBA2C57FC.idx  TestMain.cpp.C2E050EB4BB7DF70.idx  TopicRegistry.cpp.872EAA77CFEDFC73.idx  TopicRegistry.h.3BA36CF45552B6F1.idx  UdpLink.cpp.95BF230DA892BF86.idx  UdpLink.h.DD450F316950FC6B.idx
Core/: DDS_Core_Design_Document.md  Message.h  RingBuffer.cpp  RingBuffer.h  SharedMemory.cpp  TopicRegistry.cpp  TopicRegistry.h
PhysicalLayer/: BasePhysicalLink.cpp  BasePhysicalLink.h  BasicTypes.h  IPhysicalLink.h
ddf_lib/include/MB_DDF/: MB_DDF_PHYSICAL.h  MB_DDF_TOOLS.h
ddf_lib/include/MB_DDF/DDS/: DDSCore.h  Subscriber.h
ddf_lib/include/MB_DDF/Debug/: Logger.h  LoggerExtensions.h
ddf_lib/include/MB_DDF/PhysicalLayer/Device/: CanDevice.h
docs/: 安装与打包.md
docs/can/: can.md
src/: TestMain.cpp
src/MB_DDF/: MB_DDF_CORE.h
src/MB_DDF/DDS/: DDSCore.cpp  DDSCore.h  Message.h  Publisher.cpp  Publisher.h  RingBuffer.cpp  RingBuffer.h  SemaphoreGuard.h  SharedMemory.cpp  Subscriber.cpp  Subscriber.h  TopicRegistry.cpp  TopicRegistry.h
src/MB_DDF/Debug/: Logger.h  LoggerExtensions.h
src/MB_DDF/Monitor/: DDSMonitor.cpp
src/MB_DDF/PhysicalLayer/: BasePhysicalLink.cpp  BasePhysicalLink.h  BasicTypes.h  IPhysicalLink.h  Types.h  UdpLink.cpp  UdpLink.h
src/MB_DDF/PhysicalLayer/ControlPlane/: IDeviceTransport.h  NullTransport.h  XdmaTransport.cpp  XdmaTransport.h
src/MB_DDF/PhysicalLayer/DataPlane/: ILink.h  UdpLink.cpp  UdpLink.h
src/MB_DDF/PhysicalLayer/Device/: CanDevice.cpp  CanFdDevice.cpp  CanFdDevice.h  CanFdDeviceHardware.cpp  DdrDevice.cpp  HelmDevice.cpp  HelmDevice.h  Rs422Device.cpp  Rs422Device.h  TransportLinkAdapter.h
src/MB_DDF/PhysicalLayer/Factory/: HardwareFactory.cpp  HardwareFactory.h
src/MB_DDF/PhysicalLayer/Hardware/: io_map.h  pl_canfd.h  xcanfd_hw.h
src/MB_DDF/PhysicalLayer/Support/: Error.h  Log.h
src/MB_DDF/PhysicalLayer/Transport/: ITransport.h  MultiDeviceEpoll.cpp  MultiDeviceEpoll.h  PcieTransport.cpp  PcieTransport.h  XdmaTransport.cpp  XdmaTransport.h
src/MB_DDF/Test/: TestCML.cpp  TestFuncAutoPilot.cpp  TestFuncFlyControl.cpp  TestFuncHelmControl.cpp  TestHelm.cpp  TestMonitor.cpp  TestPhysicalLayer.cpp  TestPub1.cpp  TestPub2.cpp  TestPubSub1.cpp  TestPubSub2.cpp  TestPublishPerf.cpp  TestRealTime.cpp  TestSub1.cpp  TestSub2.cpp  TestSub3.cpp  TestWithUI.cpp
src/MB_DDF/Timer/: ChronoHelper.cpp  ChronoHelper.h  SystemTimer.cpp  SystemTimer.h
src/MB_DDS/Core/: Message.h  RingBuffer.cpp  RingBuffer.h  SharedMemory.cpp  SharedMemory.h
src/MB_DDS/PhysicalLayer/: BasePhysicalLink.cpp  BasePhysicalLink.h  BasicTypes.h  IPhysicalLink.h  UdpLink.cpp  UdpLink.h
